--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@ scale=1.0">
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="IMG/Logo.svg" alt="logotipo"
+<img src="img/todos-os-carros.webp" alt="logotipo"
 
 class="container imagem"><h1 class="container titulo">
-    Biblioteca Start
+    f1 redbull
     </h1>
     <p class="container frase">
-    "Aqui cada livro é um <i>start</i> para o seu
-    
-    conhecimento!"</p>
+    "correr é arte"</p>
     </div>
     </header>
     </body>
